installing depdendencies before building

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -15,13 +15,12 @@ phases:
       - echo NODE VERSION--...
   pre_build:
     commands:
-      - echo installing nest/cli...
-      - npm i -g rimraf
-      - npm i -g @nestjs/cli
+      - echo installing dependencies...
+      - yarn
   build:
     commands:
-      # - echo testing...
-      # - echo building...
+      - echo testing...
+      - echo building...
       - npm run build
 artifacts:
   files:
